Coding Bersih Tipen

--- a/Update 7- Clean.ipynb
+++ b/Update 7- Clean.ipynb
@@ -5900,7 +5900,7 @@
     "    #komen sementara\n",
     "    # data_order=pd.read_csv(r\"D:\\Masterdata\\Input Data\\orderonline_orders_all_products_08-07-2022_MOoUrPq6Pzq0pu2y.csv\")\n",
     "    driver.close()\n",
-    "    product_order = pd.read_csv(r'Input Data/orderonline_products_Surabaya.csv')\n",
+    "    product_order = pd.read_csv(r'data_supp/orderonline_products_Surabaya.csv')\n",
     "    \n",
     "    data_order['order_id'] = data_order['order_id'].fillna(method='ffill')\n",
     "    data_order = data_order.drop('quantity', axis = 1)\n",
@@ -6922,7 +6922,7 @@
     "    data_order = pd.read_csv(r'Input Data/' + str(file_name))\n",
     "    driver.close()\n",
     "\n",
-    "    product_order = pd.read_csv(r'Input Data/orderonline_products_Jakarta.csv')\n",
+    "    product_order = pd.read_csv(r'data_supp/orderonline_products_Jakarta.csv')\n",
     "\n",
     "    data_order['order_id'] = data_order['order_id'].fillna(method='ffill')\n",
     "    data_order = data_order.drop('quantity', axis = 1)\n",
