Coding kotor tipen 091122

--- a/Update 7 - Kotor.ipynb
+++ b/Update 7 - Kotor.ipynb
@@ -5501,7 +5501,7 @@
     "    import os\n",
     "    import glob\n",
     "\n",
-    "    list_of_files = glob.glob('Clean Data/*.csv')\n",
+    "    list_of_files = glob.glob('D:\\Masterdata\\Clean Data\\*.csv')\n",
     "    latest_file = max(list_of_files, key=os.path.getctime)\n",
     "\n",
     "    data_all = pd.read_csv(latest_file, sep = ';',converters = {'Phone' : str, 'Order #' : str, 'AWB' : str})\n",
@@ -21964,7 +21964,7 @@
     "### run 14\n",
     "### export masterdata\n",
     "\n",
-    "data_all.to_csv(r'Clean Data/data_all_' + data_now + '.csv', sep = ';', index = False)"
+    "data_all.to_csv(r'D:\\Masterdata\\Clean Data\\data_all_' + data_now + '.csv', sep = ';', index = False)"
    ]
   },
   {
@@ -22041,6 +22041,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#NOT USED\n",
     "from datetime import date\n",
     "osf=pd.read_excel(r\"data_supp\\order filter.xlsx\")\n",
     "data_all[(data_all['Year'].isin([2021,2022]))&\n",
@@ -22058,7 +22059,7 @@
     "from datetime import date\n",
     "osf=pd.read_excel(r\"data_supp\\order filter.xlsx\")\n",
     "data_all[(data_all['Year'].isin([2022]))&\n",
-    "         (data_all['Order Status'].isin(osf['order filter'].unique()))].groupby(['Year','Month','Date','Store Type','Store','Channel','Warehouse Name','Order Status','Region Group','Coupon Code','Brand','Sub Brand','Real SKU','Real Nama Produk','Bundle Name'],dropna=False).agg({'Order #':'nunique','Phone':'nunique','Qty. Invoiced':'sum','Total Net Before PPN':'sum'}).reset_index().to_excel(f'masterdata_{date.today()}_lite new.xlsx',index=False)\n",
+    "         (data_all['Order Status'].isin(osf['order filter'].unique()))].groupby(['Year','Month','Date','Store Type','Store','Channel','Warehouse Name','Order Status','Region Group','Coupon Code','Brand','Sub Brand','Real SKU','Real Nama Produk','Bundle Name'],dropna=False).agg({'Order #':'nunique','Phone':'nunique','Qty. Invoiced':'sum','Total Net Before PPN':'sum'}).reset_index().to_excel(f'D:\\Masterdata\\Masterdata Lite\\masterdata_{date.today()}_lite new.xlsx',index=False)\n",
     "# data_all.groupby(['Year','Month','Date','Store Type','Store','Channel','Order Status'])[['Order #']].nunique().reset_index().to_excel(f'Cek order gerak {date.today()}.xlsx',index=False)"
    ]
   },
@@ -22083,6 +22084,7 @@
     }
    ],
    "source": [
+    "#NOT USED\n",
     "data_all[data_all['True datetime']>'2022-04-01'][['Order #','Order Status','Year','Month','Week','Date','Store Type','Store',\n",
     "                                                  'Channel','Brand','Real SKU','Real Nama Produk','Bundle Name','Qty. Invoiced',\n",
     "                                                  'Total Net Before PPN','Total','Coupon Code','Customer Name','Customer Email',\n",
@@ -22117,7 +22119,7 @@
     "resa=data_all[(data_all['Year'].isin([2022,2021]))&(data_all['Order Status'].isin(osf['order filter'].unique()))&\n",
     "                           (data_all['Store Type']=='Organic')][['Order #','Year','Month','Date','Store Type','Store','Channel','Coupon Code','Brand','Sub Brand','Real SKU','Real Nama Produk','Bundle Name','Qty. Invoiced','Total','Total Net','Total Net Before PPN','Customer Name','Customer Email','Phone','Payment Channel','City','Region','Real Region']]\n",
     "print('tinggal append export')\n",
-    "resa.append(resb).to_excel(f'masterdata_{date.today()}_custlite v2.xlsx',index=False)"
+    "resa.append(resb).to_excel(f'D:\\Masterdata\\Masterdata Lite\\masterdata_{date.today()}_custlite v2.xlsx',index=False)"
    ]
   },
   {
@@ -22131,7 +22133,7 @@
     "data_all[data_all['True datetime']>'2022-08-01'][['Order #','Order Status','Year','Month','Week','Date','Store Type','Store',\n",
     "                                                  'Channel','Brand','Real SKU','Real Nama Produk','Bundle Name','Qty. Invoiced',\n",
     "                                                  'Total Net Before PPN','Total','Coupon Code','Customer Name','Customer Email',\n",
-    "                                                  'Phone','Address','Warehouse Name','City','Region','Region Group','Real Region']].to_excel(f'Masterdata Lite Order {date.today()}.xlsx',index=False)"
+    "                                                  'Phone','Address','Warehouse Name','City','Region','Region Group','Real Region']].to_excel(f'D:\\Masterdata\\Masterdata Lite\\Masterdata Lite Order {date.today()}.xlsx',index=False)"
    ]
   },
   {
