--- a/Update 7 - Kotor.ipynb
+++ b/Update 7 - Kotor.ipynb
@@ -17632,7 +17632,7 @@
     "\n",
     "    options = Options()\n",
     "    options.add_experimental_option(\"prefs\", {\n",
-    "            \"download.default_directory\": os.path.abspath(r\"C:\\Users\\steven.nathanael\\OneDrive - PT Nutrifood Indonesia\\Documents\\Python\\Data\\Master Data\\MD min\\Input Data\"),\n",
+    "            \"download.default_directory\": os.path.abspath(r\"Input Data\"),\n",
     "            \"download.directory_upgrade\": True,\n",
     "            \"safebrowsing_for_trusted_sources_enabled\": False,\n",
     "            \"safebrowsing.enabled\": False\n",
