--- a/Update 7- Clean.ipynb
+++ b/Update 7- Clean.ipynb
@@ -264,8 +264,8 @@
     "    driver.find_element_by_xpath('//*[@type=\"button\" and contains(text(),\"Apply\")]').click()\n",
     "    time.sleep(100)\n",
     "    WebDriverWait(driver, 30).until(EC.element_to_be_clickable((By.XPATH, \"(//*[@type='button' and contains(text(),'Export')])[1]\"))).click()\n",
-    "    driver.find_element_by_xpath('//span[text()=\"Sales Order\"]').click()\n",
-    "    driver.find_element_by_xpath('//span[text()=\"Sales Order\"]').click()\n",
+    "    driver.find_element_by_xpath('//span[text()=\"Sales Order v2\"]').click()\n",
+    "    driver.find_element_by_xpath('//span[text()=\"Sales Order v2\"]').click()\n",
     "    WebDriverWait(driver, 10).until(EC.element_to_be_clickable((By.XPATH, \"(//*[@type='button' and contains(text(),'Export')])[2]\"))).click()\n",
     "    time.sleep(2)\n",
     "\n",
@@ -298,7 +298,8 @@
     "data = {'dashboard_user_email' : 'andra.miftah@nutrifood.co.id', \"dashboard_user_password\" : 'nutrimart1234'}\n",
     "r = s.post(\"https://www.forstok.com/dashboard/users/login\", data = data)\n",
     "\n",
-    "text = 'https://forstok-staging-storage.s3.ap-southeast-1.amazonaws.com/items_import/nutrifood--forstok-sales_orders-version_1-' + date + '.xls'\n",
+    "# text = 'https://forstok-staging-storage.s3.ap-southeast-1.amazonaws.com/items_import/nutrifood--forstok-sales_orders-version_1-' + date + '.xls'\n",
+    "text = 'https://forstok-staging-storage.s3.ap-southeast-1.amazonaws.com/items_import/nutrifood--forstok-sales_orders-version_2-' + date + '.xls'\n",
     "print(text)\n",
     "while True:\n",
     "    r = s.get(text)\n",
